--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "module": "index.ts",
   "type": "module",
   "private": true,
+  "scripts": {
+    "format": "biome format --write ."
+  },
   "devDependencies": {
+    "@biomejs/biome": "^2.3.8",
     "@flatten-js/core": "^1.6.8",
     "@tscircuit/alphabet": "^0.0.8",
     "@types/bun": "latest",
